@@ -10,6 +10,8 @@ Release 0.12.1 - unreleased
 
     S2GRAPH-24: Add counter config for readonly graph (Committed by Jaesang Kim).
 
+    S2GRAPH-11: Performance tuning on sort by scoreSum on PostProcess (Committed by DOYUNG YOON).
+
   BUG FIXES
 
   TASKS
